--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 	</div><!-- end .wrapper -->
 	<footer>
 		<div class="social-media">
-			<script type="text/javascript">
+			<script>
 			//<![CDATA[
 			<!--
 			var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
