--- a/index.html
+++ b/index.html
@@ -13,19 +13,9 @@
 	<meta name="msapplication-TileImage" content="mstile-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<style>
-	html, body, div, span, applet, object, iframe,
-	h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-	a, abbr, acronym, address, big, cite, code,
-	del, dfn, em, img, ins, kbd, q, s, samp,
-	small, strike, strong, sub, sup, tt, var,
-	b, u, i, center,
-	dl, dt, dd, ol, ul, li,
-	fieldset, form, label, legend,
-	table, caption, tbody, tfoot, thead, tr, th, td,
-	article, aside, canvas, details, embed, 
-	figure, figcaption, footer, header, hgroup, 
-	menu, nav, output, ruby, section, summary,
-	time, mark, audio, video {
+	html, body, div, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+	a, em, img, b, u, i, ol, ul, li,
+	article, footer, header, nav, section {
 		margin: 0;
 		padding: 0;
 		border: 0;
@@ -56,7 +46,7 @@
 		border-bottom: #121212 solid 1.5px;
 	}
 	header {
-		margin: 0 0 4em;
+		margin: 1.6em 0 4em;
 	}
 	body {
 		line-height: 1;
