--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Ashlee Couldwell</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="theme-color" content="#9B1EA6">
 </head>
 <body>
 	<div class="about">
